assets/css/main.css
/* ... */
.counter-up::before {
  position: absolute;
  content: "";
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
}

.counter-up .content {
  z-index: 1;
  position: relative;
  display: flex;
  width: 100%;
  height: 100%;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
}

.counter-up .content .box {
  width: calc(25% - 30px);
  border-radius: 5px;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  flex-direction: column;
  padding: 20px;
  height: 26em;
}

.content .box .icon {
  font-size: 4em;
  color: white;
  border: 1px solid;
  padding: 43px 45px;
  border-radius: 50%;
}

.content .box .counter {
  font-size: 50px;
  font-weight: 500;
  margin: 20px 0px;
  color: white;
  font-family: sans-serif;
}

.content .box .text {
  font-weight: 400;
  color: white;
  text-transform: uppercase;
  font-size: 20px;
  text-align: center;
}

@media screen and (max-width: 1036px) {
  .counter-up {
    padding: 50px 50px 0 50px;
  }

  .counter-up .content .box {
    width: calc(50% - 30px);
    margin-bottom: 50px;
  }
}

@media screen and (max-width: 580px) {
  .counter-up .content .box {
    width: 100%;
    margin: 0px;
  }

  .content .box .counter {
    margin: 10px 0px;
  }
}

@media screen and (max-width: 500px) {
  .wrapper {
    padding: 20px;
  }

  .counter-up {
    padding: 30px 20px 0 20px;
  }
}

/* //// Counter end//// */
/* navigate to top button */
#buttontop {
  background: #fc0155;
  color: white;
  outline: none;
  border: none;
  position: fixed;
  bottom: 50px;
  right: 30px;
  height: 55px;
  width: 55px;
  border-radius: 30px;
  z-index: 10;
  cursor: pointer;
}

.disappear {
  opacity: 0;
}

.appear {
  opacity: 1;
}

